--- a/templates/index.html
+++ b/templates/index.html
@@ -8,31 +8,53 @@
   </head>
   <body>
     <div class="container-fluid">
+      {% if request.path == "/" %}
       <form action = "{{ url_for('results') }}" method = "post">
         <div class="form-group">
           <label for="name">Name:</label>
           <input type=text class="form-control" name="name" placeholder="First Last">
           <small id="emailHelp" class="form-text text-muted">This is going to break your heart.</small>
           <label for="dojo">Dojo Location:</label>
-            <select class="form-control">
-              <option value="sj">San Jose</option>
-              <option value="la">Los Angeles</option>
+            <select class="form-control" name="location">
+              <option value="San Jose">San Jose</option>
+              <option value="Los Angeles">Los Angeles</option>
               <option value="houston">Houston</option>
-              <option value="dojo_south">McMurdo Station, Ross Ice Shelf, Antarctica</option>
+              <option value="McMurdo Station, Ross Ice Shelf, Antarctica">Dojo South</option>
             </select>
-          <label for="location">Favorite Language:</label>
-            <select class="form-control">
-              <option value="klingon">Klingon</option>
-              <option value="javascript">JavaScript</option>
-              <option value="python">Python</option>
-              <option value="penguin">Penguin</option>
+          <label for="language">Favorite Language:</label>
+            <select class="form-control" name="language">
+              <option value="Klingon">Klingon</option>
+              <option value="JavaScript">JavaScript</option>
+              <option value="Python">Python</option>
+              <option value="Penguin">Penguin</option>
             </select>
           <label for="comment">Comment:</label>
-          <textarea class="form-control" id="comment" rows="5"></textarea>
+          <textarea class="form-control" id="comment" rows="5" name="comment"></textarea>
         </div>
         <input type="submit" value="submit" class="btn btn-primary"></input>
       </form>
+      {% endif %}
+      {% if request.path == "/results" %}
+        <div class="card text-white bg-info mb-3" style="max-width: 18rem;">
+          <div class="card-header">Submitted Info</div>
+          <div class="card-body">
+            <h5 class="card-title">Name:</h5>
+            <p class="card-text">{{ name }}</p>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Dojo Location:</h5>
+            <p class="card-text">{{ location }}</p>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Favorite Language:</h5>
+            <p class="card-text">{{ language }}</p>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Comment:</h5>
+            <p class="card-text">{{ comment }}</p>
+          </div>
+        </div>
+      {% endif %}
     </div>
-    <p> {{ name }} </p>
   </body>
 </html>
